[package]
name = "kvds" # key_value_data_store
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["multipart", "blocking"] }
#regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#uuid = { version = "1", features = ["v4"] }
#futures-util = "0.3"
once_cell = "1.21"
#derive_more = "2"
ctor = "0.5.0"
config = "0.15.18"
globset = "0.4"

[dev-dependencies]
serial_test = "3.2.0"
